# ndustria

./: .gitignore  README.md  ndustria_setup.py  pyproject.toml  setup.py  setup.sh
src/: Cache.py  Config.py  Decorators.py  Logger.py  Pipeline.py  Task.py  View.py  __init__.py  example.py  log.py  ndustria.py
tests/: basic.py  basic_test.py  data_N_100000.txt  data_N_1000000.txt  data_N_10000000.txt  manual_save_test.py  memcheck_test.py  multiple_dependencies_test.py  package_test.py  pipeline_kwargs.py  profile_output.txt  run_all_tests.sh  simple_example.py  sync_resolve_test.py  test.out  test_multiple_dependencies.py  timing_test.py  timing_test_timing.csv  ~basic_test.py  ~basic_test_line_profilers.py  ~memcheck_test.py  ~sync_resolve_test.py
tests/nbody_test/: nbody.py  nbody_parallel_test.py  nbody_test.py
tutorial/: basic.ipynb
tutorial-scripts/: pipeline_kwargs.py  ~multiple_dependencies_test.py
tutorials/: rerun_test.py
tutorials/nbody_test/: nbody.py
