[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndustria"
version = "2025.0.0"
description = "Prevent Programs form Unnecessary Reruns"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Mackenzie Ticoras", email = "scottm59@msu.edu"}]
dependencies = [
    "numpy",
    "tabulate", 
    "mpi4py", 
    "matplotlib",
]
requires-python = ">=3.8"